# clippy-c2rust-mapping

./: Cargo.toml  README.md
c2rust-transpile/: Cargo.toml
c2rust-transpile/src/: lib.rs
c2rust-transpile/src/c_ast/: conversion.rs
c2rust-transpile/src/translator/: mod.rs
ccm/: Cargo.toml
ccm-display/: package.json
ccm-display/src/: App.css  App.tsx  index.css
ccm-display/src/components/: CRustCard.tsx  Code.tsx  MappingsList.tsx
ccm/src/: main.rs
pprint_inputs/: b2sum.c-output.txt  basename.c-output.txt  basenc.c-output.txt  bench-md5.c-output.txt  bench-sha1.c-output.txt  bench-sha224.c-output.txt  bench-sha256.c-output.txt  bench-sha384.c-output.txt  bench-sha512.c-output.txt  blake2b-ref.c-output.txt  c-strcasestr.c-output.txt  cat.c-output.txt  chcon.c-output.txt  chgrp.c-output.txt  chmod.c-output.txt  chown-core.c-output.txt  chown.c-output.txt  chroot.c-output.txt  cksum.c-output.txt  comm.c-output.txt  copy.c-output.txt  cp-hash.c-output.txt  cp.c-output.txt  crctab.c-output.txt  csplit.c-output.txt  cut.c-output.txt  date.c-output.txt  dd.c-output.txt  df.c-output.txt  digest.c-output.txt  dircolors.c-output.txt  dirname.c-output.txt  du.c-output.txt  echo.c-output.txt  env.c-output.txt  expand-common.c-output.txt  expand.c-output.txt  expr.c-output.txt  false.c-output.txt  find-mount-point.c-output.txt  (+94 more)
