[package]
name = "ccm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.22", features = ["yaml", "cargo", "derive"] }
env_logger = "0.10"
git-testament = "0.2.1"
is_executable = "1.0"
log = "0.4"
regex = "1.3"
shlex = "1.1"
c2rust-transpile = { version = "0.17.0", path = "../c2rust-transpile" }

[build-dependencies]
c2rust-build-paths = { path = "../c2rust-build-paths" , version = "0.17.0" }